[build-system]
requires = ["setuptools>=68", "build>=1.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lg-viz"                         
version = "0.1.0"
description = "Tiny, styled visualizer + analyzer for workflow graphs (Mermaid/HTML/PNG/SVG export)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name="Sarjak Maniar", email="sarjakm369@gmail.com"}]
keywords = ["graphviz", "mermaid", "workflow", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Sarjak369/lg_viz"
Issues   = "https://github.com/Sarjak369/lg_viz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph", "visualizer", "examples"]

[tool.setuptools.package-data]
visualizer = ["py.typed"]

[tool.setuptools]
include-package-data = true
