[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langflow-viz"
version = "0.2.2"
description = "Elegant visualizer and analyzer for LangGraph-like workflow graphs"
readme = "README.md"
requires-python = ">=3.9"
author = "Sarjak Maniar"
author_email = "sarjakm369@gmail.com"
authors = [
  { name = "Sarjak Maniar", email = "sarjakm369@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Sarjak369/langflow-viz"
Repository = "https://github.com/Sarjak369/langflow-viz"
Documentation = "https://github.com/Sarjak369/langflow-viz#readme"
Issues = "https://github.com/Sarjak369/langflow-viz/issues"

[tool.hatch.build.targets.wheel]
packages = ["langflow_viz"]


